Cambios con stats, páginas estáticas y detalles de diseño

--- a/templates/web/pormibarrio/static/privacy.html
+++ b/templates/web/pormibarrio/static/privacy.html
@@ -3,83 +3,28 @@
 <div class="sticky-sidebar">
     <aside>
         <ul class="plain-list">
-            <li><a href="/faq">Frequently Asked Questions</a></li>
-            <li><a href="/faq#practical">Practical Questions</a></li>
-            <li><a href="/faq#organisation">Organisation Questions</a></li>
+            <li><a href="/faq">Preguntas Frecuentes</a></li>
             <li><strong>Privacy and cookies</strong></li>
-            <li><a href="/contact">Contact FixMyStreet</a></li>
+            <li><a href="/contact">Contacta al equipo</a></li>
         </ul>
     </aside>
 </div>
 
-<h1>Privacy, cookies, and third party services</h1>
-
-<p><strong>Our use of your data, cookies, and external services: what you should know, and how to opt out if you want to.</strong></p>
-
-<p>Summary: We care a lot about our users’ privacy. We provide details below,
-and we try our hardest to look after the private data that we hold. Like many
-other websites, we sometimes use cookies and Google Analytics to help us make
-our websites better. These tools are very common and used by many other sites,
-but they do have privacy implications, and as a charity concerned with socially
-positive uses of the internet, we think it’s important to explain them in full.
-If you don’t want to share your browsing activities on mySociety’s sites with
-other companies, you can adjust your usage or install opt-out browser plugins.
-
-<h2>Privacy</h2>
-
-    <dl>
-        <dt>Who gets to see my email address?</dt>
-        <dd>If you submit a problem, we pass on your details, and details
-of the problem, to the council contact or contacts responsible for the
-area where you located the problem, or other relevant body (for example, in
-most of London we send reports via the central London Report-It service, who
-may also publish the public details of your report). Other than the council, who obviously get your
-email address, only people we authorise to view the FixMyStreet administration interface
-will be able to see your email address and they will never use it for anything other than 
-to help administer FixMyStreet. Similarly with email addresses from updates. We will never give or sell your email address to anyone else, 
-unless we are obliged to by law. Your name, given in the name field, will not
-be published anywhere unless you let us (if you give your name elsewhere, e.g.
-in the public details section, it will be publicly available).</dd>
-        <dt>Will you send nasty, brutish spam to my email address?</dt>
-        <dd>Never. We will email you if someone leaves an update on a
-problem you&rsquo;ve reported, and send you a questionnaire email four weeks
-after you submit a problem, asking for a status update; we&rsquo;ll only ever
-send you emails in relation to your problem.</dd>
-    </dl>
-
+<h1>Privacidad, cookies y servicios de terceros</h1>
+<b>Nuestro uso de sus datos, cookies y servicios externos: lo que debería saber, y cómo reusarse.</b>
+<p>Nos importa la privacidad de nuestros usuarios y tratamos de proteger los datos privados que manejamos. Como muchos otros sitios web, utilizamos en algunos casos cookies y Google Analytics como herramientas para ayudarnos a mejorar nuestro sitio web. Estas herramientas son comunes y utilizadas en muchos sitios, sin embargo tienen implicancias en términos de privacidad y como organización sin fines de lucro involucrada en los usos socialmente positivos del internet, consideramos importante explicarlas en profundidad.</p>
+<p>Si no desea compartir con otros sus datos de navegación en los sitios de DATA, debe optar por bloquear los plugins y Javascript en su navegador. Tenga en cuenta que el sitio puede no funcionar de manera adecuada sin javascript.</p>
+<h2>Privacidad</h2>
+<h3>¿Quién puede ver mi correo electrónico y cédula de identidad?</h3>
+<p>Si reporta un problema, nosotros enviamos los detalles que usted proporciona en el reporte del problema y su contacto a las divisiones correspondientes en la IM. EN el caso de la cédula de identidad se trata de un documento que exige la Intendencia de Montevideo para la realización del reclamo, mientras que el correo nos permite comunicarnos con los usuarios para hacerles saber sobre el progreso de los reportes.</p>
+<p>Además de la IM, y por supuesto PMB, los únicos capaces de acceder a su correo electrónico serán aquellos autorizados por PMB con la finalidad de administrar y mejorar la plataforma. El mismo criterio aplica para las actualizaciones de correos electrónicos; bajo ninguna circunstancia venderemos ni cederemos las direcciones de correo electrónico (excepto bajo solicitud judicial). El nombre que usted proporciona al completar el campo en la aplicación, no será publicado en ningún otro lugar de no haber sido habilitado por usted a través de incluirlo en alguna sección pública, por ejemplo: en el cuerpo de la descripción del problema.</p>
+<h3>¿Enviaremos spam a su correo electrónico?</h3>
+<p>Nunca. Sólo le enviaremos correos electrónicos relacionados con el/los problema/s que usted haya reportado, es decir: actualizaciones que otros usuarios realicen del reporte que usted haya ingresado, así como eventualmente un cuestionario después de realizado el reporte consultándole sobre las actualizaciones de estado del mismo. En alguna ocasión podemos comunicarnos con los usuarios para informarles sobre novedades de la plataforma o DATA, pero siempre contarán con la opción de dejar de recibir esos correos.<p>
 <h2>Cookies</h2>
-
-<p>To make our service easier or more useful, we sometimes place small data files on your computer or mobile phone, known as cookies; many websites do this. We use this information to, for example, remember you have logged in so you don't need to do that on every page, or to measure how people use the website so we can improve it and make sure it works properly. Below, we list the cookies and services that this site can use.
-
-<table cellpadding=5>
-<tr align="left"><th scope="col">Name</th><th scope="col">Typical Content</th><th scope="col">Expires</th></tr>
-<tr><td>fixmystreet_app_session</td><td nowrap>A random unique identifier</td><td>When browser is closed, or four weeks if &ldquo;Keep me signed in&rdquo; is ticked</td></tr>
-</table>
-
-<h3>Measuring website usage (Google Analytics)</h3>
-
-<p>We use Google Analytics to collect information about how people use this site. We do this to make sure it’s meeting its users’ needs and to understand how we could do it better. Google Analytics stores information such as what pages you visit, how long you are on the site, how you got here, what you click on, and information about your web browser. IP addresses are masked (only a portion is stored) and personal information is only reported in aggregate. We do not allow Google to use or share our analytics data for any purpose besides providing us with analytics information, and we recommend that any user of Google Analytics does the same.
-
-<p>If you’re unhappy with data about your visit to be used in this way, you can install the <a href="http://tools.google.com/dlpage/gaoptout">official browser plugin for blocking Google Analytics</a>.
-
-<p>The cookies set by Google Analytics are as follows:
-
-<table cellpadding=5>
-<tr align="left"><th scope="col">Name</th><th scope="col">Typical Content</th><th scope="col">Expires</th></tr>
-<tr><td>__utma</td><td>Unique anonymous visitor ID</td><td>2&nbsp;years</td></tr>
-<tr><td>__utmb</td><td>Unique anonymous session ID</td><td>30&nbsp;minutes</td></tr>
-<tr><td>__utmz</td><td>Information on how the site was reached (e.g. direct or via a link/search/advertisement)</td><td>6&nbsp;months</td></tr>
-<tr><td>__utmx</td><td>Which variation of a page you are seeing if we are testing different versions to see which is best</td><td>2&nbsp;years</td></tr>
-</table>
-
-<h4>Google’s Official Statement about Analytics Data</h4>
-
-<p>“This website uses Google Analytics, a web analytics service provided by Google, Inc. (“Google”). Google Analytics uses “cookies”, which are text files placed on your computer, to help the website analyze how users use the site. The information generated by the cookie about your use of the website (including your IP address) will be transmitted to and stored by Google on servers in the United States . Google will use this information for the purpose of evaluating your use of the website, compiling reports on website activity for website operators and providing other services relating to website activity and internet usage.  Google may also transfer this information to third parties where required to do so by law, or where such third parties process the information on Google’s behalf. Google will not associate your IP address with any other data held by Google.  You may refuse the use of cookies by selecting the appropriate settings on your browser, however please note that if you do this you may not be able to use the full functionality of this website.  By using this website, you consent to the processing of data about you by Google in the manner and for the purposes set out above.”</p>
-
-<p><a href="http://www.mysociety.org/privacy-online/">More general information on how third party services work</a></p>
-
-<h2>Credits</h2>
-
-<p>Bits of wording taken from the <a href="http://www.gov.uk/help/cookies">gov.uk cookies page</a> (under the Open Government Licence).
-
+<p>Al igual que muchos otros sitios web, algunas veces instalamos pequeños archivos de datos (cookies) en su computadora o celular para hacer nuestro servicio más útil y fácil de navegar. Esta información es utilizada, por ejemplo para recordar que usted ya tiene un usuario en la aplicación y que no tenga que registrarse cada vez que la utilice, o para medir cómo se utiliza la aplicación con el ánimo de que funcione de la mejor manera posible. También lo utilizamos en caso de que usted quiera hacer uso del sitio a través de redes sociales, de forma que una vez que usted autoriza la aplicación a ingresar sus datos desde la red social de preferencia, el ingreso sea inmediato si usted está navegando en dicha red.</p>
+<h3>Medición de uso del sitio (Google Analytics)</h3>
+<p>Para asegurarnos de que la aplicación esté acorde a las necesidades de nuestros usuarios, e intentar mejorarla utilizamos Google Analytics para recolectar información sobre cómo se utiliza. Google Analytics almacena información como qué páginas ha visitado, cuánto tiempo ha navegado en las mismas, cómo llegó a la página, qué elementos clikea e información sobre qué navegador utiliza. Su dirección IP es enmascarada (parcialmente almacenada) y la información individual solo es reportada de forma agregada. No permitimos a Google usar o compartir nuestros datos analíticos para ningún propósito además de proveernos de información analítica y recomendamos que todo usuario de Google Analytics siga la misma política.<p>
+<span>Por más detalles ver la <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">información oficial de Google Analytics</a>.</span>
+<h2>Licencias sobre el contenido subido al sitio</h2>
+<p>El texto, imágenes y cualquier contenido que los usuarios suben al sitio web queda bajo licencia <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Atribución-Compartir Igual 4.0 Internacional</a>. Esto implica que ese contenido queda libre para ser utilizado por nosotros o terceros bajo una licencia que asegura que la autoría del mismo sea reconocida siempre.</p>
 [% INCLUDE 'footer.html' pagefooter = 'yes' %]
