--- a/web/cobrands/pormibarrio/main.css
+++ b/web/cobrands/pormibarrio/main.css
@@ -103,7 +103,7 @@ div#fms_pan_zoom.pan-horizontal div{
 }
 
 .content-vertical{
-	margin-top: 116px;
+	margin-top: 160px;
 	/*padding-left: 20px;*/
 	padding-right: 20px;
 }
@@ -2250,3 +2250,54 @@ div.content-vertical{
 	
 }
 
+/*CHARTS*/
+#graphs{
+	margin-top: 20px;
+}
+#graph-subcat{
+	float: left;
+	width: 100%;
+}
+.graph-group{
+	width: 100%;
+	height: 400px;
+}
+#download-data{
+	text-align: center;
+	margin: 20px;
+}
+.download-links{
+	padding: 5px;
+	margin: 20px;
+	border: 1px solid rgb(235, 235, 235);
+}
+#chart-options{
+	display: inline-block;
+	width: 100%;
+	padding-bottom: 20px;
+	border-bottom: #ebebeb solid 1px;
+}
+#chart-options input, #chart-options label{
+	display: inline-block;
+	max-width: 16%;
+}
+
+#subcat-select{
+
+}
+
+.content-horizontal .chart-group{
+	width: 40%;
+	margin: 2%;
+}
+
+.chart-group{
+	float: left;
+	width: 100%;
+}
+#chart-subcat{
+	float: left;
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
