Se agrega edición de usuario, se modifican controladores de FB y TW para vínculo de cuentas. Se agrega funcionalidad para sustituir foto con redes. Se corrijn algunas otras cosas.

--- a/templates/web/pormibarrio/auth/general.html
+++ b/templates/web/pormibarrio/auth/general.html
@@ -4,7 +4,7 @@
 %]
 
 <form action="[% c.uri_for() %]" method="post" name="general_auth" class="validate">
-<input type="hidden" name="r" value="/">
+<input type="hidden" name="r" value="/my">
     [% IF email_error;
 
         # other keys include fqdn, mxcheck if you'd like to write a custom error message
