--- a/templates/web/pormibarrio/my/my.html
+++ b/templates/web/pormibarrio/my/my.html
@@ -10,65 +10,155 @@
 [% ELSE %]
     <div id="skipped-map">
 [% END %]
+    <div id="my" class="reportes sub report-list">
+        [% IF c.req.params.me1 || c.req.params.mt1 || c.req.params.mt2 || c.req.params.mf1 || c.req.params.mf2 || messages || password_changed %]
+        <div id="messages">
+            <a class="btn btn-back profile-back-message" href="#">X</a>
+            <script>
+            $('.profile-back-message').click(function(e){
+                $('#messages').hide();
+            });
+            </script>
+            [% IF c.req.params.me1 %]
+                <p>[% loc('Your changes have been saved') %]</p>
+            [% END %]
+            [% IF c.req.params.mt1 %]
+                <p>[% loc('Your Twitter account has been asociated. You can now login using this account') %]</p>
+            [% END %]
+            [% IF c.req.params.mt2 %]
+                <p>[% loc('The twitter account is already asociated to other user. If you want to change it, login with twitter and unlink your account') %]</p>
+            [% END %]
+            [% IF c.req.params.mf1 %]
+                <p>[% loc('Your Facebook account has been asociated. You can now login using this account') %]</p>
+            [% END %]
+            [% IF c.req.params.mf2 %]
+                <p>[% loc('The Facebook account is already asociated to other user. If you want to change it, login with twitter and unlink your account') %]</p>
+            [% END %]
+            [% IF password_changed %]
+                <p>[% loc('Your password has been changed') %]</p>
+            [% END %]
+            [% messages %]
+        </div>
+        [% END %]
+        <div class="ir" id="top-profile">
+            <div class="c-t profile">
+                <a id="profile-edit" class="btn btn-sky btn-small btn-comentar btn-editar">Editar</a>
+                <div class="img-profile">
+                    [% IF c.user.picture_url %]
+                        <img src="[% c.user.picture_url %]" class="img-circle" alt="[% c.user.name %]">
+                    [% ELSE %]
+                        <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg">
+                    [% END %]
+                </div>
+                [% IF password_changed %]
+                    <p id="fixed">[% loc('Your password has been changed') %]</p>
+                [% END %]
+                <h2>[% c.user.name %]</h2>
 
-<h1>[% loc('Your Reports') %]</h1>
+                <div class="rep-filtro">
+                    <button type="button" id="tus-reportes" class="btn btn-filtro btn-filtro-active">
+                        <svg class="icon icon-icono1" viewBox="0 0 24 24"><use xlink:href="#icon-icono1"></use></svg>
+                        <br>Tus reportes<br>
+                    </button>
+                    <button type="button" id="siguiendo" class="btn btn-filtro">
+                        <svg class="icon icon-icono9" viewBox="0 0 24 24"><use xlink:href="#icon-icono9"></use></svg>
+                        <br>Siguiendo<br>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div id="user-reports">
+            <div class="full-wide">
+                <a class="btn btn-back profile-back profile-back-reports" href="#">Volver</a>
+            </div>
+            <div id="my-reports-filter">
+                <button type="button" id="reports-confirmed" class="btn btn-filter btn-filtro btn-filtro-active">
+                    [% loc('Confirmed') %]
+                </button>
+                <button type="button" id="reports-in-progress" class="btn btn-filter btn-filtro">
+                [% loc('In Progress') %]
+                </button>
+                <button type="button" id="reports-fixed" class="btn btn-filter btn-filtro">
+                [% loc('Completed') %]
+                </button>
+                <button type="button" id="reports-unconfirmed" class="btn btn-filter btn-filtro">
+                [% loc('Unconfirmed') %]
+                </button>
+            </div>
+            <div id="my-reports-confirmed" class="page-tabs my-report-tabs">
+                <div class="rl scrolled">
+                [% FOREACH p = problems.confirmed %]
+                    [% INCLUDE problem %]
+                [% END %]
+                </div>
+            </div>
 
-[% IF c.cobrand.moniker == 'fixmybarangay' %]
-    [% INCLUDE '_barangay_buttons.html' %]
-[% END %]
+            <div id="my-reports-in-progress" class="page-tabs my-report-tabs" style="display:none;">
+                <div class="rl scrolled">
+                [% FOREACH p = problems.in_progress %]
+                    [% INCLUDE problem %]
+                [% END %]
+                </div>
+            </div>
 
-[% INCLUDE 'pagination.html',
-    pager = problems_pager,
-    param = 'p'
-%]
+            <div id="my-reports-fixed" class="page-tabs my-report-tabs" style="display:none;">
+                <div class="rl scrolled">
+                [% FOREACH p = problems.fixed %]
+                    [% INCLUDE problem %]
+                [% END %]
+                </div>
+            </div>
 
-[% FOREACH p = problems.confirmed %]
-    [% IF loop.first %]<h2>[% loc('Open reports') %]</h2>[% END %]
-    [% INCLUDE problem %]
-[% END %]
+            <div id="my-reports-unconfirmed" class="page-tabs my-report-tabs" style="display:none;">
+                <div class="rl scrolled">
+                    [%# FOREACH p = problems.unconfirmed;
+                        INCLUDE problem;
+                    END %]
+                </div>
+            </div>
+        </div>
 
-[% FOREACH p = problems.fixed %]
-    [% IF loop.first %]<h2>[% loc('Fixed reports') %]</h2>[% END %]
-    [% INCLUDE problem %]
-[% END %]
+        <div id='user-interactions' style="display:none;">
+            <div class="full-wide">
+                <a class="btn btn-back profile-back profile-back-interactions" href="#">Volver</a>
+            </div>
+            <div id="my-interactions-filter">
+                <button type="button" id="following" class="btn btn-filter btn-filtro btn-filtro-active">
+                    [% loc('Following') %]
+                </button>
+                <button type="button" id="comments" class="btn btn-filter btn-filtro">
+                [% loc('Comments') %]
+                </button>
+            </div>
+            <div id="my-comments" class="page-tabs my-social-tabs" style="display: none;">
+            [% FOREACH u IN updates %]
+                [% IF loop.first %]
+                    [% INCLUDE 'pagination.html',
+                        pager = updates_pager,
+                        param = 'u'
+                    %]
+                    <ul class="issue-list">
+                [% END %]
+                        <li>&ldquo;[% u.text | html %]&rdquo;
+                        &ndash; <a href="[% c.uri_for( '/report', u.problem_id ) %]#update_[% u.id %]">[% u.problem.title | html %]</a>.
+                            <p><small class="council_sent_info">
+                            [% tprintf( loc("Created %s"), u.confirmed.strftime('%d/%m/%Y %H:%M') ) %]
+                            </small></p>
+                        </li>
+                [% "</ul>" IF loop.last %]
+            [% END %]
 
-[% FOREACH p = problems.closed %]
-    [% IF loop.first %]<h2>[% loc('Closed reports') %]</h2>[% END %]
-    [% INCLUDE problem %]
-[% END %]
-
-[%# FOREACH p = problems.unconfirmed;
-    IF loop.first;
-        '<h2>' _ loc('Unconfirmed reports') _ '</h2>';
-    END;
-    INCLUDE problem;
-END %]
-
-[% FOREACH u IN updates %]
-    [% IF loop.first %]
-        <h2>[% loc('Your updates') %]</h2>
-        [% INCLUDE 'pagination.html',
-            pager = updates_pager,
-            param = 'u'
-        %]
-        <ul class="issue-list full-width">
-    [% END %]
-
-    <li>&ldquo;[% u.text | html %]&rdquo;
-    &ndash; <a href="[% c.uri_for( '/report', u.problem_id ) %]#update_[% u.id %]">[% u.problem.title | html %]</a>.
-        <p><small class="council_sent_info">
-        [% tprintf( loc("Added %s"), prettify_dt( u.confirmed, 'date' ) ) %]
-        </small></p>
-    </li>
-    [% "</ul>" IF loop.last %]
-[% END %]
-
-</div>
-
+            </div>
+            <div id="my-following" class="page-tabs my-social-tabs">
+            </div>
+        </div>
+    </div>
+    [% INCLUDE my/edit.html 
+        style = 'display:none;',
+        not_page = 1
+    %]
 [% INCLUDE 'footer.html' %]
 
 [% BLOCK problem %]
-    [% "<ul class='issue-list-a full-width'>" IF loop.first %]
     [% INCLUDE 'report/_item.html', problem = p, no_fixed =1 %]
-    [% "</ul>" IF loop.last %]
 [% END %]
